[package]
name = "tunneler-rs"
version = "0.1.0"
authors = ["bramvdbogaerde <contact@bramvdb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.1", features = ["full"]}
tokio-util = { features = ["codec"], version = "0.6.1" }
bytes = "1.0.1"
byteorder = "1.4.2"
futures = "0.3"
